@@ -49,11 +49,14 @@
         <li>[Feature] Option to display hidden files in upload prompt (<a href="http://trac.cyberduck.ch/ticket/1243">#1243</a>)
         </li>
         <li>[Feature] Import Transmit favorites (<a href="http://trac.cyberduck.ch/ticket/3073">#3073</a>)</li>
-        <li>[Feature] - [Feature] Copy and open multiple URLs (<a href="http://trac.cyberduck.ch/ticket/5135">#5135</a>)</li>
+        <li>[Feature] - [Feature] Copy and open multiple URLs (<a href="http://trac.cyberduck.ch/ticket/5135">#5135</a>)
+        </li>
         <li>[Bugfix] Uploading .xlsx or .docx documents fails with permission error (<a
                 href="http://trac.cyberduck.ch/ticket/5169">#5169</a>) (Google Docs)
         </li>
         <li>[Bugfix] Reading and writing ACLs (Google Docs)</li>
+        <li>[Bugfix] Interoperability with cPanel Web Disk (WebDAV) (<a href="http://trac.cyberduck.ch/ticket/5188">#5188</a>)
+        </li>
     </ul>
 
     <strong><a href=
