@@ -15,6 +15,7 @@ Changelog. Last modified: $Date$
 - [Feature] Copy and open multiple URLs (#5135)
 - [Bugfix] Uploading .xlsx or .docx documents fails with permission error (#5169) (Google Docs)
 - [Bugfix] Reading and writing ACLs (Google Docs)
+- [Bugfix] Interoperability with cPanel Web Disk (WebDAV) (#5188)
 
 3.6.1 (Sep-07-2010) [http://trac.cyberduck.ch/milestone/3.6.1]
 - [Bugfix] Permissions reset (FTP) (#5132)
